--- a/index.html
+++ b/index.html
@@ -1,9 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
+ <head>
+   <meta charset="utf-8">
+   <title></title>
+   <!-- Latest compiled and minified CSS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+ <style>
+ body{
+   font-family: 'Lato', sans-serif;
+ }
+ .well {
+   margin-top: 10px;
 
-</body>
+ }
+
+ #header{
+   font-weight: bolder;
+   margin-top: 10px;
+   background-color: #236;
+   color: white;
+   padding: 50px;
+   font-size: 65px;
+   border-radius: 10px;
+ }
+
+ .panelHeaders{
+   background-color: #345;
+   color: white;
+ }
+
+ </style>
+ </head>
+
+ <body>
+   <div class="container">
+     <div id="header" class="text-center">
+       <i class="fa fa-newspaper-o" aria-hidden="true"></i> New York Times Search
+     </div>
+     <div class="well">
+     <div class="panelHeaders">
+     <span id="notTheHeader" class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> Search Parmeters
+     </div>
+     <!-- header here -->
+
+
+     <!-- form here -->
+
+     <form class="searchParameters">
+       <div class="form-group">
+         <label for="searchTerm">Search Term</label>
+         <input type="text" class="form-control" id="searchTerm" placeholder="Example Roosevelt...">
+       </div>
+       <div class="form-group">
+         <label for="record">Number of Records to Retrive: </label>
+         <select class="form-control" id="dunnoYet">
+           <option>1</option>
+           <option>5</option>
+           <option>10</option>
+         </select>
+       </div>
+       <button id="searchButton" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
+         <button id="clearButton" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-trash"></span> Clear Results</button>
+     </form>
+     </div>
+     <!-- Stuff from api here -->
+     <div class="well" id="topArticles">
+       Articles will go here
+     </div>
+   </div>
+ </body>
+
+ <script type="text/javascript">
+ 	var queryURL = "https://api.nytimes.com/svc/search/v2/articlesearch.json?api-key=b9f91d369ff59547cd47b931d8cbc56b:0:74623931&q=user-input;"
+    $.ajax({url: queryURL, method: 'GET'})
+    .done(function(response) {
+    console.log(response)
+
+    $('#searchButton').on('click', function() {
+        var user-input = $('input-textbox').val().trim();
+
+        $('#searchTerm').
+        $('.form-group').
+
+}
+
+ 	
+ </script>
 </html>
